# interpret-lightgbm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: demo.ipynb  ilgb_example.ipynb
src/interpret_lightgbm/: __init__.py  interpret.py  model.py  utils.py
tests/: test_import.py
